// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form:initData 1`] = `
<div>
  <form
    class="a-Form a-Form--normal"
    novalidate=""
  >
    <div
      class="a-Form-item a-Form-item--normal"
      data-role="form-item"
    >
      <div
        class="a-Form-control a-TextControl"
      >
        <div
          class="a-TextControl-input"
        >
          <input
            autocomplete="off"
            name="a"
            placeholder=""
            size="10"
            type="text"
            value="1"
          />
        </div>
      </div>
    </div>
    <div
      class="a-Form-item a-Form-item--normal"
      data-role="form-item"
    >
      <div
        class="a-Form-control a-TextControl"
      >
        <div
          class="a-TextControl-input"
        >
          <input
            autocomplete="off"
            name="b"
            placeholder=""
            size="10"
            type="text"
            value="2"
          />
        </div>
      </div>
    </div>
    <button
      class="a-Button a-Button--default"
      type="submit"
    >
      <span>
        Submit
      </span>
    </button>
    <input
      style="display: none;"
      type="submit"
    />
  </form>
</div>
`;

exports[`Form:initData 2`] = `
Object {
  "a": "1",
  "b": "2",
}
`;

exports[`Form:initData:remote 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Spinner-overlay in"
        />
        <div
          class="a-Spinner in a-Spinner--overlay"
        />
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              <span
                class="a-TplField"
              >
                <span>
                  Label
                </span>
              </span>
            </span>
          </label>
          <div
            class="a-Form-control a-TextControl is-disabled"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                disabled=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="123"
              />
            </div>
          </div>
        </div>
        <input
          style="display: none;"
          type="submit"
        />
      </form>
    </div>
    <div
      class="a-Panel-footerWrap"
    >
      <div
        class="a-Panel-btnToolbar a-Panel-footer"
      >
        <div
          class="a-Button a-Button--default is-disabled"
          disabled=""
        >
          <span>
            Submit
          </span>
        </div>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Form:initData:remote 2`] = `
Object {
  "config": Object {
    "cancelExecutor": [Function],
    "errorMessage": "fetchFailed",
    "onSuccess": [Function],
    "successMessage": undefined,
  },
  "method": "get",
  "query": Object {
    "a": "123",
  },
  "url": "/api/xxx?a=123",
}
`;

exports[`Form:initData:remote 3`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Spinner-overlay"
        />
        <div
          class="a-Spinner a-Spinner--overlay"
        />
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              <span
                class="a-TplField"
              >
                <span>
                  Label
                </span>
              </span>
            </span>
          </label>
          <div
            class="a-Form-control a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="1"
              />
            </div>
          </div>
        </div>
        <input
          style="display: none;"
          type="submit"
        />
      </form>
    </div>
    <div
      class="a-Panel-footerWrap"
    >
      <div
        class="a-Panel-btnToolbar a-Panel-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Form:initData:remote 4`] = `
Object {
  "a": 1,
  "b": 2,
}
`;

exports[`Form:initData:super 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-body"
        >
          <form
            class="a-Form a-Form--normal"
            novalidate=""
          >
            <div
              class="a-Form-item a-Form-item--normal"
              data-role="form-item"
            >
              <div
                class="a-Form-control a-TextControl"
              >
                <div
                  class="a-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value="1"
                  />
                </div>
              </div>
            </div>
            <div
              class="a-Form-item a-Form-item--normal"
              data-role="form-item"
            >
              <div
                class="a-Form-control a-TextControl"
              >
                <div
                  class="a-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    name="b"
                    placeholder=""
                    size="10"
                    type="text"
                    value="2"
                  />
                </div>
              </div>
            </div>
            <button
              class="a-Button a-Button--default"
              type="submit"
            >
              <span>
                Submit
              </span>
            </button>
            <input
              style="display: none;"
              type="submit"
            />
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form:initData:super 2`] = `Object {}`;

exports[`Form:initData:without-super 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-body"
        >
          <form
            class="a-Form a-Form--normal"
            novalidate=""
          >
            <div
              class="a-Form-item a-Form-item--normal"
              data-role="form-item"
            >
              <div
                class="a-Form-control a-TextControl"
              >
                <div
                  class="a-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="a-Form-item a-Form-item--normal"
              data-role="form-item"
            >
              <div
                class="a-Form-control a-TextControl"
              >
                <div
                  class="a-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    name="b"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <button
              class="a-Button a-Button--default"
              type="submit"
            >
              <span>
                Submit
              </span>
            </button>
            <input
              style="display: none;"
              type="submit"
            />
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form:initData:without-super 2`] = `Object {}`;
